[package]
name = "mod_logger"
version = "0.6.0"
authors = ["Thomas <thomas@etnur.net>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]

[dependencies.failure]
 version = "0.1"

[dependencies.colored]
version = "1.9"

[dependencies.chrono]
version = "0.4"

[dependencies.regex]
version = "1.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.8"

[dependencies.log]
version = "0.4"
features = ["std"]
