[package]
name = "mod_logger"
version = "0.7.1"
authors = ["Thomas Runte <thomas@etnur.net>"]
edition = "2018"
description = "A consumer for the log crate that allows module wise configuration."
readme = "README.md"
repository = "https://github.com/samothx/ModuleLogger"
license = "MIT OR Apache-2.0"
keywords = ["Logging"]
categories = ["development-tools::debugging"]
[lib]
path = "src/lib.rs"
publish = true

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]

[dependencies.colored]
version = "1.9"

[dependencies.chrono]
version = "0.4"

[dependencies.regex]
version = "=1.3.7"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.8"

[dependencies.log]
version = "0.4"
features = ["std"]
