[package]
name = "mod_logger"
version = "0.8.2"
authors = ["Thomas Runte <thomas@etnur.net>"]
edition = "2021"
description = "A consumer for the log crate that allows module-wise configuration."
readme = "README.md"
repository = "https://github.com/samothx/ModuleLogger"
license = "MIT OR Apache-2.0"
keywords = ["Logging"]
categories = ["development-tools::debugging"]

[features]
# default = ["config"]
config = ["serde","serde_yaml"]

[lib]
path = "src/lib.rs"
publish = true

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]

[dependencies.colored]
version = "1.9"

[dependencies.chrono]
version = "0.4"

[dependencies.regex]
version = "1"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_yaml]
version = "0.8"
optional = true

[dependencies.log]
version = "0.4"
features = ["std"]

[dependencies.cfg-if]
version = "0.1.10"
